--- a/AB_Testing.ipynb
+++ b/AB_Testing.ipynb
@@ -2911,7 +2911,7 @@
         "**Chỉ số đánh giá (Evaluation Metric):** Retention (tỷ lệ ở lại sau 14 ngày).\n",
         "\n",
         "-->Triển khai:\n",
-        "Nếu có sự gia tăng đáng kể (về thống kê và thực tiễn) ở Retention, và tác động đến tài nguyên (ví dụ: duy trì nhóm học không quá tốn kém), thì thí nghiệm sẽ được triển khai chính thức."
+        "Nếu có sự gia tăng đáng kể (về thống kê và thực tiễn) ở Retention, và tác động đến tài nguyên ở mức cho phép (ví dụ: duy trì nhóm học không quá tốn kém), thì thí nghiệm sẽ được triển khai chính thức."
       ],
       "metadata": {
         "id": "OTkAnSovVc9u"
